[144] [composebox] Fix the context menu z-index while dragging overlay is present.
Before:
http://screencast/cast/NjU5ODE1OTYzODcyNDYwOHw2ZDU5OGYwMi1kYw
After:
http://screencast/cast/NjI5MzA0MDAxMTQxMTQ1NnxhMTBiOTg0NC1hMg

(cherry picked from commit e081fb52ccdc4b995388928a197bcc658be97d90)

Bug: b:472516390, 475338251
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/7398689
Commit-Queue: Dhruv Kathpalia <dhruvkathpalia@google.com>
Cr-Original-Commit-Position: refs/heads/main@{#1564717}
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/7457854
Commit-Queue: Justin Donnelly <jdonnelly@chromium.org>
Cr-Commit-Position: refs/branch-heads/7559@{#3396}
Cr-Branched-From: 223dfbac1c7542a06b422390d954afe5b560b607-refs/heads/main@{#1552494}

--- a/ui/webui/resources/cr_components/search/animated_glow.css
+++ b/ui/webui/resources/cr_components/search/animated_glow.css
@@ -29,10 +29,10 @@
   --glow-stroke-width_: 2px;
 
   --search-animated-glow-background: rgb(255, 255, 255);
-  --search-animated-glow-background-z-index: 3;
-  --search-animated-glow-drag-drop-placeholder-z-index: 4;
-  --search-animated-glow-gradient-after-z-index: 1;
-  --search-animated-glow-gradient-z-index: 2;
+  --search-animated-glow-background-z-index: 103;
+  --search-animated-glow-drag-drop-placeholder-z-index: 104;
+  --search-animated-glow-gradient-after-z-index: 101;
+  --search-animated-glow-gradient-z-index: 102;
   --search-animated-glow-brand-gradient: conic-gradient(
     rgba(52, 168, 82, 0) 0deg,
     rgba(52, 168, 82, 1) 38.9738deg,
